# movie_ticket_booking

./: README.md  package.json  pyproject.toml
.github/workflows/: ci.yml
frontend/: package-lock.json  package.json
frontend/src/: router.js
frontend/src/pages/: Home.vue  MovieDetail.vue  MovieList.vue
movie_ticket_booking/: hooks.py
movie_ticket_booking/movie_ticket_booking/dashboard_chart/booked_ticket/: booked_ticket.json
movie_ticket_booking/movie_ticket_booking/doctype/movie/: movie.js  movie.json  movie.py  test_movie.py
movie_ticket_booking/movie_ticket_booking/doctype/movie_theater/: movie_theater.js  movie_theater.json  movie_theater.py  test_movie_theater.py
movie_ticket_booking/movie_ticket_booking/doctype/theater_show/: test_theater_show.py  theater_show.js  theater_show.json  theater_show.py
movie_ticket_booking/movie_ticket_booking/doctype/ticket_booking/: test_ticket_booking.py  ticket_booking.js  ticket_booking.json  ticket_booking.py
movie_ticket_booking/movie_ticket_booking/workspace/ticket_booking_list/: ticket_booking_list.json
